vms/node-0/data/cluster/nginx-env/envoy/envoy.yaml
static_resources:
  ###############################################
  # DOWNSTREAM LISTENER WITH TLS + SNI VERIFY
  ###############################################
  listeners:
  - name: https_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    listener_filters:
      - name: envoy.filters.listener.tls_inspector
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
      - filter_chain_match:
          server_names: [ "node-00.intel.r7g.org" ]
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain: { filename: "/ssl/nodes/node-00.intel.r7g.org/node-00.intel.r7g.org.crt" }
                  private_key: { filename: "/ssl/nodes/node-00.intel.r7g.org/node-00.intel.r7g.org.key" }
              validation_context:
                trusted_ca: { filename: "/ssl/CA/ca.crt" }
            require_client_certificate: true
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              stat_prefix: ingress_https
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend_services
                    domains: [ "*" ]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          weighted_clusters:
                            clusters:
                              - name: node01_cluster
                                weight: 50
                                host_rewrite_literal: "node-01.intel.r7g.org"
                              - name: node02_cluster
                                weight: 50
                                host_rewrite_literal: "node-02.intel.r7g.org"

  ###############################################
  # UPSTREAM CLUSTER FOR node-01 (with mTLS + SNI)
  ###############################################
  clusters:
  - name: node01_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: node01_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: node-01.intel.r7g.org
                port_value: 8401
    health_checks:
      - timeout: 2s
        interval: 15s
        unhealthy_threshold: 1
        healthy_threshold: 3
        http_health_check:
          path: "/"
          expected_statuses:
            - start: 200
              end: 201
          codec_client_type: HTTP1
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: "node-01.intel.r7g.org"
        common_tls_context:
          tls_params:
            tls_minimum_protocol_version: TLSv1_3
            tls_maximum_protocol_version: TLSv1_3
          tls_certificates:
          - certificate_chain: { filename: "/ssl/users/admin/admin.crt" }
            private_key:       { filename: "/ssl/users/admin/admin.key" }
          validation_context:
            trusted_ca: { filename: "/ssl/CA/ca.crt" }

  ###############################################
  # UPSTREAM CLUSTER FOR node-02 (with mTLS + SNI)
  ###############################################
  - name: node02_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: node02_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: node-02.intel.r7g.org
                port_value: 8402
    health_checks:
      - timeout: 2s
        interval: 15s
        unhealthy_threshold: 1
        healthy_threshold: 3
        http_health_check:
          path: "/"
          expected_statuses:
            - start: 200
              end: 201
          codec_client_type: HTTP1
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: "node-02.intel.r7g.org"
        common_tls_context:
          tls_params:
            tls_minimum_protocol_version: TLSv1_3
            tls_maximum_protocol_version: TLSv1_3
          tls_certificates:
          - certificate_chain: { filename: "/ssl/users/admin/admin.crt" }
            private_key:       { filename: "/ssl/users/admin/admin.key" }
          validation_context:
            trusted_ca: { filename: "/ssl/CA/ca.crt" }

###############################################
# ADMIN INTERFACE
###############################################
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
